Updated computer science page

--- a/sub-sites/computer-science.html
+++ b/sub-sites/computer-science.html
@@ -12,31 +12,15 @@
 	</div>	
 	
 	<div class="centering">
-	<div class="resume-section"> Education </div>
-		<div class="truman-button"> Truman State University <hr class="lockton-line"> Computer Science Major <hr class="lockton-line"> Mathematics Minor</div>
+	<div class="resume-area">
+		<div class="resume-section"> Github </div>
+		<a href="https://github.com/brandonruoff8"> <div class="github-button"> Click Here </div> </a>
+		<div class="resume-section"> Education </div>
+			<div class="truman-button"> Truman State University <hr class="lockton-line"> Computer Science Major <hr class="lockton-line"> Mathematics Minor</div>
 		<div class="resume-section"> Employment History </div>
-		<div class="lockton-button"> Lockton Insurance Broker <hr class="lockton-line"> Intern in the IT department <hr class="lockton-line"> Summer 2019 </div>
-		<br>
-		<p> View my Github account </p>
-		<a href="https://github.com/brandonruoff8" class="gray-button">  GitHub </a>
-		<br>
-		<p> 
-			Some practice problems to test my programming abilities.
-		</p>
-		<a href="computer-science/practice-problems.html" class="gray-button">  Practice Problems </a>
-		<br>
-		<p> 
-			Assignments from CS315 Internet Programming at Truman State
-		</p>
-		<a href="computer-science/cs315index.html" class="gray-button"> CS 315 Internet Programming </a>
-		<br>
-		<p>
-			I am currently trying to move a Pok&eacute;mon battle simulator that I wrote in Java into Javascript so that
-			it can be played on my website.
-			<br>
-			<span class="red-text"> This is a work in progress. </span>
-		</p>
-		<a href="pokemon-battle.html" class="gray-button"> Pok&eacute;mon Battle Simulator </a>
+			<div class="lockton-button"> Lockton Insurance Broker <hr class="lockton-line"> Intern in the IT department <hr class="lockton-line"> Summer 2019 </div>
+			<div class="outback-button"> Outback Steakhouse <hr class="lockton-line"> Host and Server Assistant <hr class="lockton-line"> Fall 2015 - Fall 2017 </div>
+			<div class="jba-button"> Joseph Baldwin Academy <hr class="lockton-line"> Preceptor - Teaching Python with Minecraft <hr class="lockton-line"> July 2018 </div>
 	</div>
 </body>
 </html>
