Added Danie to Overwatch site

--- a/sub-sites/rocket-league.html
+++ b/sub-sites/rocket-league.html
@@ -125,7 +125,7 @@
 			</div>
 
 			<div class="row">
-				<div class="rank-type" id="ranked standard">Ranked Standard</div><div class="rank-value">Diamond III<img class="rank-icon" src="../pictures/rocket_league/diamondiii_icon.png" alt="Diamond III"></div>
+				<div class="rank-type" id="ranked standard">Ranked Standard</div><div class="rank-value">Champion I<img class="rank-icon" src="../pictures/rocket_league/championi_icon.png" alt="Champion I"></div>
 			</div>
 			<div class="row">
 				<div class="rank-type" id="ranked doubles">Ranked Doubles</div><div class="rank-value">Diamond II<img class="rank-icon" src="../pictures/rocket_league/diamondii_icon.png" alt="Diamond II"></div>
