--- a/sub-sites/overwatch-old.html
+++ b/sub-sites/overwatch-old.html
@@ -242,7 +242,7 @@
 			<div style="width:40%">
 				<div class="player-headline-container">
 					<div class="support-headline-left"> <img class="class-icon" src="../pictures/overwatch/support-icon.png" alt=""> Flex Support </div>
-					<div class="player-headline-right"> Danie </div>
+					<div class="player-headline-right"> Delanie </div>
 				</div>
 				<div class="player-headline-container">
 					<div class="xbox-headline"> XBOX </div>
