Added back class icons with a different name to hopefully fix the issue

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="top-strip">
-		<a href="../index.html" class="gray-button"> Back </a>
+		<a href="gaming.html" class="gray-button"> Back </a>
 	</div>		
 	<div class="centering">
 		<img class="heading" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/2000px-International_Pok%C3%A9mon_logo.svg.png" alt="Pokemon Logo">
