--- a/sub-sites/overwatch.html
+++ b/sub-sites/overwatch.html
@@ -22,7 +22,7 @@
 	
 	<div class="yellow-outline">
 		<div class="headlines-container">
-			<div style="width:40%">
+			<div style="width:30%">
 				<div class="player-headline-container">
 					<div class="support-headline-left"> <img class="class-icon" src="../pictures/overwatch/support-class-icon.png" alt="oof"> Support </div>
 					<div class="player-headline-right"> Brandon </div>
@@ -32,9 +32,25 @@
 					<div class="xbox-gamertag"> The Last Gaymer </div> 
 				</div>
 			</div>
-			<div style="width:20%">
+			<div style="width:12%">
 				<div class="skill-headline-container">
-					<div class="skill-headline"> Tank </div>
+					<div class="tank-skill-headline"> Tank </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> 3354 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="damage-skill-headline"> Damage </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> 3354 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="support-skill-headline"> Support </div>
 				</div>
 				<div class="skill-headline-container">
 					<div class="sr-headline"> 3354 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
@@ -69,7 +85,7 @@
 	
 	<div class="blue-outline">
 		<div class="headlines-container">
-			<div style="width:40%">
+			<div style="width:30%">
 				<div class="player-headline-container">
 					<div class="tank-headline-left"> <img class="class-icon" src="../pictures/overwatch/tank-class-icon.png" alt="oof"> Tank </div>
 					<div class="player-headline-right"> Jeremiyah </div>
@@ -79,9 +95,25 @@
 					<div class="xbox-gamertag"> Jesus Was OK </div> 
 				</div>
 			</div>
-			<div style="width:20%">
+			<div style="width:12%">
 				<div class="skill-headline-container">
-					<div class="skill-headline"> Skill </div>
+					<div class="tank-skill-headline"> Tank </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> 3055 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="damage-skill-headline"> Damage </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> 3055 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="support-skill-headline"> Support </div>
 				</div>
 				<div class="skill-headline-container">
 					<div class="sr-headline"> 3055 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
@@ -111,7 +143,7 @@
 	
 	<div class="blue-outline">
 		<div class="headlines-container">
-			<div style="width:40%">
+			<div style="width:30%">
 				<div class="player-headline-container">
 					<div class="tank-headline-left"> <img class="class-icon" src="../pictures/overwatch/tank-class-icon.png" alt="oof"> Tank </div>
 					<div class="player-headline-right"> Joshuah </div>
@@ -121,9 +153,25 @@
 					<div class="xbox-gamertag"> WhiteWadeWilson </div> 
 				</div>
 			</div>
-			<div style="width:20%">
+			<div style="width:12%">
 				<div class="skill-headline-container">
-					<div class="skill-headline"> Skill </div>
+					<div class="tank-skill-headline"> Tank </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="damage-skill-headline"> Damage </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="support-skill-headline"> Support </div>
 				</div>
 				<div class="skill-headline-container">
 					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
@@ -154,7 +202,7 @@
 	
 		<div class="yellow-outline">
 		<div class="headlines-container">
-			<div style="width:40%">
+			<div style="width:30%">
 				<div class="player-headline-container">
 					<div class="damage-headline-left"> <img class="class-icon" src="../pictures/overwatch/damage-class-icon.png" alt="oof"> Damage </div>
 					<div class="player-headline-right"> Logan </div>
@@ -164,9 +212,25 @@
 					<div class="xbox-gamertag"> RinoSlayer </div> 
 				</div>
 			</div>
-			<div style="width:20%">
+			<div style="width:12%">
 				<div class="skill-headline-container">
-					<div class="skill-headline"> Skill </div>
+					<div class="tank-skill-headline"> Tank </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="damage-skill-headline"> Damage </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="support-skill-headline"> Support </div>
 				</div>
 				<div class="skill-headline-container">
 					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
@@ -197,7 +261,7 @@
 	
 	<div class="blue-outline">
 		<div class="headlines-container">
-			<div style="width:40%">
+			<div style="width:30%">
 				<div class="player-headline-container">
 					<div class="tank-headline-left"> <img class="class-icon" src="../pictures/overwatch/tank-class-icon.png" alt="oof"> Flex Tank </div>
 					<div class="player-headline-right"> Hugh </div>
@@ -207,9 +271,25 @@
 					<div class="pc-gamertag"> pippinish33 </div> 
 				</div>
 			</div>
-			<div style="width:20%">
+			<div style="width:12%">
 				<div class="skill-headline-container">
-					<div class="skill-headline"> Skill </div>
+					<div class="tank-skill-headline"> Tank </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> 762 SR <img class="skill-icon" src="../pictures/overwatch/bronze-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="damage-skill-headline"> Damage </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> 762 SR <img class="skill-icon" src="../pictures/overwatch/bronze-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="support-skill-headline"> Support </div>
 				</div>
 				<div class="skill-headline-container">
 					<div class="sr-headline"> 762 SR <img class="skill-icon" src="../pictures/overwatch/bronze-icon.png"> </div>
@@ -239,7 +319,7 @@
 	
 	<div class="yellow-outline">
 		<div class="headlines-container">
-			<div style="width:40%">
+			<div style="width:30%">
 				<div class="player-headline-container">
 					<div class="support-headline-left"> <img class="class-icon" src="../pictures/overwatch/support-class-icon.png" alt="oof"> Flex Support </div>
 					<div class="player-headline-right"> Delanie </div>
@@ -249,12 +329,28 @@
 					<div class="xbox-gamertag"> daniedoodlez </div> 
 				</div>
 			</div>
-			<div style="width:20%">
+			<div style="width:12%">
 				<div class="skill-headline-container">
-					<div class="skill-headline"> Skill </div>
+					<div class="tank-skill-headline"> Tank </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline"> 1866 SR <img class="skill-icon" src="../pictures/overwatch/silver-icon.png"> </div>
+					<div class="sr-headline"> 1866 SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="damage-skill-headline"> Damage </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> 1866 SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
+				</div>
+			</div>
+			<div style="width:12%">
+				<div class="skill-headline-container">
+					<div class="support-skill-headline"> Support </div>
+				</div>
+				<div class="skill-headline-container">
+					<div class="sr-headline"> 1866 SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
 				</div>
 			</div>
 			<div class="gray-outline white-text third-width">
