Updated Pokemon page with new SWSH news

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -35,8 +35,8 @@
 			
 			<h3> New Pok&eacute;mon! </h3>
 			
-				<a href="https://pokemondb.net/pokedex/morpeko"> <img width = "45%" src="../pictures/pokemon/morpeko-full.png" alt="morpeko-full">
-				<a href="https://pokemondb.net/pokedex/morpeko"> <img width = "45%" src="../pictures/pokemon/morpeko-hangry.png" alt="morpeko-full">
+				<a href="https://pokemondb.net/pokedex/cramorant"> <img width = "45%" src="../pictures/pokemon/cramorant.png" alt="cramorant">
+				<a href="https://pokemondb.net/pokedex/polteageist"> <img width = "45%" src="../pictures/pokemon/polteageist.png" alt="polteageist">
 			
 			<h3> Galar Forms and Galar Form Evolutions! </h3>
 			
@@ -54,6 +54,8 @@
 			<h3> Previously Announced New Pok&eacute;mon </h3>
 			
 			<div>
+				<a href="https://pokemondb.net/pokedex/morpeko"> <img width = "45%" src="../pictures/pokemon/morpeko-full.png" alt="morpeko-full">
+				<a href="https://pokemondb.net/pokedex/morpeko"> <img width = "45%" src="../pictures/pokemon/morpeko-hangry.png" alt="morpeko-full">
 				<a href="https://pokemondb.net/pokedex/yamper"> <img width = "45%" src="../pictures/pokemon/yamper.png" alt="yamper"> </a>
 				<a href="https://pokemondb.net/pokedex/alcremie"> <img width = "45%" src="../pictures/pokemon/alcremie.png" alt="alcremie"> </a>
 				<a href="https://pokemondb.net/pokedex/rolycoly"> <img width = "45%" src="../pictures/pokemon/rolycoly.png" alt="rolycoly"> </a>
