Added calendar page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body class="margin-top">
 	<div class="top-strip centering">	
+		<a href="sub-sites/calendar.html" class="gray-button gray-button-top">Calendar</a>
 		<a href="sub-sites/computer-science.html" class="gray-button gray-button-top" >Computer Science</a>
 		<a href="sub-sites/gaming.html" class="gray-button gray-button-top">Gaming</a>
 		<a href="sub-sites/piano.html" class="gray-button gray-button-top">Piano</a>
