Updated Pokemon SWSH Checklist

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -192,7 +192,7 @@
 			<div>
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/aegislash.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/infernape.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/rotom.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/rotom.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/eelektross.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/banette.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/banette-mega.png">
