Modified Overwatch stats temporarily

--- a/sub-sites/overwatch.html
+++ b/sub-sites/overwatch.html
@@ -37,7 +37,7 @@
 					<div class="tank-skill-headline"> Tank </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline"> 3354 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
 				</div>
 			</div>
 			<div style="width:14%">
@@ -45,7 +45,7 @@
 					<div class="damage-skill-headline"> Damage </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline"> 3354 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
 				</div>
 			</div>
 			<div style="width:14%">
@@ -53,7 +53,7 @@
 					<div class="support-skill-headline"> Support </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline"> 3354 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/masters-icon.png"> </div>
 				</div>
 			</div>
 			<div class="gray-outline white-text" style="width:20%">
@@ -100,7 +100,7 @@
 					<div class="tank-skill-headline"> Tank </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline"> 3055 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/masters-icon.png"> </div>
 				</div>
 			</div>
 			<div style="width:14%">
@@ -108,7 +108,7 @@
 					<div class="damage-skill-headline"> Damage </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline"> 3055 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
 				</div>
 			</div>
 			<div style="width:14%">
@@ -116,7 +116,7 @@
 					<div class="support-skill-headline"> Support </div>
 				</div>
 				<div class="skill-headline-container">
-					<div class="sr-headline"> 3055 SR <img class="skill-icon" src="../pictures/overwatch/diamond-icon.png"> </div>
+					<div class="sr-headline"> ---- SR <img class="skill-icon" src="../pictures/overwatch/platinum-icon.png"> </div>
 				</div>
 			</div>
 			<div class="gray-outline white-text" style="width:20%">
@@ -126,7 +126,8 @@
 
 		<div class="hero-section">
 			<div class="tank-heroes-container" style="flex-grow:3">
-				<img class="overwatch-small overwatch-tank-main" src="../pictures/overwatch/icon-winston.png" alt="Overwatch Hero"> 
+				<img class="overwatch-small overwatch-tank-main" src="../pictures/overwatch/icon-winston.png" alt="Overwatch Hero">
+				<img class="overwatch-small overwatch-tank-main" src="../pictures/overwatch/icon-sigma.png" alt="Overwatch Hero"> 
 				<img class="overwatch-small overwatch-tank-off" src="../pictures/overwatch/icon-hammond.png" alt="Overwatch Hero">
 				<img class="overwatch-small overwatch-tank-main" src="../pictures/overwatch/icon-reinhardt.png" alt="Overwatch Hero">
 			</div>
