Fixed Overwatch page format for Microsoft Edge

--- a/sub-sites/overwatch.html
+++ b/sub-sites/overwatch.html
@@ -184,19 +184,18 @@
 		</div>
 
 		<div class="hero-section">
-			<div class="tank-heroes-container" style="flex-grow:7">
-				<img class="overwatch-small overwatch-tank-main" src="../pictures/overwatch/overwatch-logo.png" alt="Overwatch Hero">
-				<img class="overwatch-small overwatch-tank-off" src="../pictures/overwatch/overwatch-logo.png" alt="Overwatch Hero">		
-				<img class="overwatch-small overwatch-tank-off" src="../pictures/overwatch/overwatch-logo.png" alt="Overwatch Hero">
-				<img class="overwatch-small overwatch-tank-main" src="../pictures/overwatch/overwatch-logo.png" alt="Overwatch Hero">
-				<img class="overwatch-small overwatch-tank-off" src="../pictures/overwatch/overwatch-logo.png" alt="Overwatch Hero">		
-				<img class="overwatch-small overwatch-tank-off" src="../pictures/overwatch/overwatch-logo.png" alt="Overwatch Hero">
+			<div class="tank-heroes-container" style="flex-grow:2">
+				<img class="overwatch-small overwatch-tank-off" src="../pictures/overwatch/icon-dva.png" alt="Overwatch Hero">		
+				<img class="overwatch-small overwatch-tank-off" src="../pictures/overwatch/icon-zarya.png" alt="Overwatch Hero">
+
 			</div>
-			<div class="damage-heroes-container" style="flex-grow:1">
+			<div class="damage-heroes-container" style="flex-grow:3">
 				<img class="overwatch-small overwatch-dps" src="../pictures/overwatch/icon-hanzo.png" alt="Overwatch Hero">
+				<img class="overwatch-small overwatch-dps" src="../pictures/overwatch/icon-soldier76.png" alt="Overwatch Hero">
+				<img class="overwatch-small overwatch-dps" src="../pictures/overwatch/icon-doomfist.png" alt="Overwatch Hero">
 			</div>
 			<div class="support-heroes-container" style="flex-grow:1">
-				<img class="overwatch-small overwatch-heal" src="../pictures/overwatch/overwatch-logo.png" alt="Overwatch Hero">				
+				<img class="overwatch-small overwatch-heal" src="../pictures/overwatch/icon-zenyatta.png" alt="Overwatch Hero">				
 			</div>
 		</div>
 	</div>
