Updated SWSH Checklist

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -190,7 +190,7 @@
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/medicham-mega.png">
 			</div>
 			<div>
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/aegislash.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/aegislash.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/infernape.png">
 				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/rotom.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/eelektross.png">
