Updated Pokemon SWSH News

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -34,7 +34,7 @@
 			</div>
 			
 			<h3> New Pok&eacute;mon! </h3>
-			
+				<a href="https://pokemondb.net/pokedex/sirfetchd"> <img width = "45%" src="../pictures/pokemon/sirfetchd.png" alt="sirfetchd">			
 				<a href="https://pokemondb.net/pokedex/cramorant"> <img width = "45%" src="../pictures/pokemon/cramorant.png" alt="cramorant">
 				<a href="https://pokemondb.net/pokedex/polteageist"> <img width = "45%" src="../pictures/pokemon/polteageist.png" alt="polteageist">
 			
