Added more to SWSH Checklist and updated

--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -191,7 +191,7 @@
 			</div>
 			<div>
 				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/aegislash.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/infernape.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/zoroark.png">
 				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/rotom.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/eelektross.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/banette.png">
@@ -201,17 +201,25 @@
 				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/meowstic.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/greninja.png">
 				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/vanilluxe.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/incineroar.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/wishiwashi.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/camerupt.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/camerupt-mega.png">
 			</div>
 			<div>
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/bronzong.png">
-				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/zoroark.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/talonflame.png">
-				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/wishiwashi.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/torkoal.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/infernape.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/incineroar.png">
 				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/charizard.png">
 				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/charizard-mega-x.png">
+			</div>
+			<div>
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/staraptor.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/bronzong.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/avalugg.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/wailord.png">
+				<img class="poke-mini-sprite" src="../pictures/pokemon/mini-sprites/lucario.png">
+				<img class="poke-mini-sprite silhouette" src="../pictures/pokemon/mini-sprites/lucario-mega.png">
 			</div>
 
 			<h3> Legendaries </h3>
