Updated Pokemon and Poke-Teams pages

--- a/sub-sites/poke-teams.html
+++ b/sub-sites/poke-teams.html
@@ -98,42 +98,20 @@
 			</div>
 		</div>
 		
+		
+		
 		<div class="white-outline centering third-width">
-			<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
+			<h2 class="white-text"> Current Team - Pok&eacute;mon Shield </h2>
 			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu.gif">
+				<img src="../pictures/pokemon/3dmodels/rookidee.png">
 				<br>
-				<span class="yellow-text gray-button">Raichu<br>"Ryan"</span>
+				<span class="gray-button">Rookidee</span>
 			</div>
 			<br>
 			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu-alola.gif">
+				<img src="../pictures/pokemon/3dmodels/scorbunny.png">
 				<br>
-				<span class="yellow-text gray-button"> Raichu </span>
-			</div>
-			<br>
-			<div>
-				<img width="50px" src="gaming/meltan-sprite.png">
-				<br>
-				<span class="light-gray-text gray-button"> Meltan </span>
-			</div>
-			<br>
-			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/lapras.gif">
-				<br>
-				<span class="light-blue-text gray-button"> Lapras </span>
-			</div>
-			<br>
-			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/charizard.gif">
-				<br>
-				<span class="pale-orange-text gray-button"> Charizard </span>
-			</div>
-			<br>
-			<div>
-				<img src="https://play.pokemonshowdown.com/sprites/xyani/eevee.gif">
-				<br>
-				<span class="tan-text gray-button"> Eevee </span>
+				<span class="gray-button"> Scorbunny </span>
 			</div>
 		</div>
 	</div>
@@ -190,6 +168,45 @@
 	<a name="game-playthroughs">
 	<h2 class="black-bg"> Game Playthroughs </h2>
 	<div class="container"> 
+		<div class="white-outline centering third=width">
+		<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu.gif">
+				<br>
+				<span class="yellow-text gray-button">Raichu<br>"Ryan"</span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu-alola.gif">
+				<br>
+				<span class="yellow-text gray-button"> Raichu </span>
+			</div>
+			<br>
+			<div>
+				<img width="50px" src="gaming/meltan-sprite.png">
+				<br>
+				<span class="light-gray-text gray-button"> Meltan </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/lapras.gif">
+				<br>
+				<span class="light-blue-text gray-button"> Lapras </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/charizard.gif">
+				<br>
+				<span class="pale-orange-text gray-button"> Charizard </span>
+			</div>
+			<br>
+			<div>
+				<img src="https://play.pokemonshowdown.com/sprites/xyani/eevee.gif">
+				<br>
+				<span class="tan-text gray-button"> Eevee </span>
+			</div>
+		</div>
+		
 		<div class="white-outline centering third-width">	
 			<h2 class="white-text"> Pok&eacute;mon Sun and Ultra Sun </h2>
 			<div>
