Updated Pokemon SWSH team

--- a/sub-sites/poke-teams.html
+++ b/sub-sites/poke-teams.html
@@ -101,18 +101,37 @@
 		
 		
 		<div class="white-outline centering third-width">
-			<h2 class="white-text"> Current Team - Pok&eacute;mon Shield </h2>
+						<h2 class="white-text"> Current Team - Pok&eacute;mon Shield </h2>
 			<div>
 				<img src="../pictures/pokemon/3dmodels/rookidee.png">
 				<br>
-				<span class="gray-button">Rookidee</span>
+				<span class="gray-button">Corvisquire</span>
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/scorbunny.png">
+				<img src="../pictures/pokemon/3dmodels/boltund.png">
 				<br>
-				<span class="gray-button"> Scorbunny </span>
+				<span class="gray-button"> Boltund </span>
 			</div>
+			<br>
+			<div>
+				<img src="../pictures/pokemon/3dmodels/yamask-g.png">
+				<br>
+				<span class="gray-button"> Yamask (Galarian) </span>
+			</div>
+			<br>
+			<div>
+				<img src="../pictures/pokemon/3dmodels/wishiwashi.png">
+				<br>
+				<span class="gray-button"> Wishiwashi </span>
+			</div>
+			<br>
+			<div>
+				<img src="../pictures/pokemon/3dmodels/raboot.png">
+				<br>
+				<span class="gray-button"> Raboot </span>
+			</div>
+			<br>
 		</div>
 	</div>
 	
@@ -169,7 +188,7 @@
 	<h2 class="black-bg"> Game Playthroughs </h2>
 	<div class="container"> 
 		<div class="white-outline centering third=width">
-		<h2 class="white-text"> Current Team - Pok&eacute;mon Let's Go Eevee! </h2>
+		<h2 class="white-text"> Pok&eacute;mon Let's Go Eevee! </h2>
 			<div>
 				<img src="https://play.pokemonshowdown.com/sprites/xyani/raichu.gif">
 				<br>
