--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -193,13 +193,31 @@
 			<div>
 				<img src="../pictures/pokemon/3dmodels/rookidee.png">
 				<br>
-				<span class="gray-button">Rookidee</span>
+				<span class="gray-button">Corvisquire</span>
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/scorbunny.png">
+				<img src="../pictures/pokemon/3dmodels/boltund.png">
 				<br>
-				<span class="gray-button"> Scorbunny </span>
+				<span class="gray-button"> Boltund </span>
+			</div>
+			<br>
+			<div>
+				<img src="../pictures/pokemon/3dmodels/yamask-g.png">
+				<br>
+				<span class="gray-button"> Yamask (Galarian) </span>
+			</div>
+			<br>
+			<div>
+				<img src="../pictures/pokemon/3dmodels/wishiwashi.png">
+				<br>
+				<span class="gray-button"> Wishiwashi </span>
+			</div>
+			<br>
+			<div>
+				<img src="../pictures/pokemon/3dmodels/raboot.png">
+				<br>
+				<span class="gray-button"> Raboot </span>
 			</div>
 			<br>
 
