Updated Pokemon page

--- a/sub-sites/poke-teams.html
+++ b/sub-sites/poke-teams.html
@@ -101,11 +101,11 @@
 		
 		
 		<div class="white-outline centering third-width">
-						<h2 class="white-text"> Current Team - Pok&eacute;mon Shield </h2>
+			<h2 class="white-text"> Current Team - Pok&eacute;mon Shield </h2>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/corvisquire.png">
+				<img src="../pictures/pokemon/3dmodels/corviknight.png">
 				<br>
-				<span class="gray-button">Corvisquire</span>
+				<span class="gray-button">Corviknight</span>
 			</div>
 			<br>
 			<div>
