--- a/sub-sites/pokemon.html
+++ b/sub-sites/pokemon.html
@@ -191,9 +191,9 @@
 			
 			<h2 class="white-text"> Current Team - Pok&eacute;mon Shield </h2>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/rookidee.png">
+				<img src="../pictures/pokemon/3dmodels/corviknight.png">
 				<br>
-				<span class="gray-button">Corvisquire</span>
+				<span class="gray-button">Corviknight</span>
 			</div>
 			<br>
 			<div>
@@ -203,21 +203,23 @@
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/yamask-g.png">
+				<img src="../pictures/pokemon/3dmodels/runerigus.png">
 				<br>
-				<span class="gray-button"> Yamask (Galarian) </span>
+				<span class="gray-button"> Runerigus (Galarian) </span>
 			</div>
 			<br>
 			<div>
 				<img src="../pictures/pokemon/3dmodels/wishiwashi.png">
 				<br>
+				<img src="../pictures/pokemon/3dmodels/wishiwashi-s.png">
+				<br>
 				<span class="gray-button"> Wishiwashi </span>
 			</div>
 			<br>
 			<div>
-				<img src="../pictures/pokemon/3dmodels/raboot.png">
+				<img src="../pictures/pokemon/3dmodels/cinderace.png">
 				<br>
-				<span class="gray-button"> Raboot </span>
+				<span class="gray-button"> Cinderace </span>
 			</div>
 			<br>
 
