--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 <body class="margin-top">
 
-	<script>
+	<!-- script>
 		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
 			window.location.replace('index-mobile.html');
 		}
-	</script>
+	</script -->
+	
 	<div class="top-strip centering">	
 		<a href="sub-sites/calendar.html" class="gray-button gray-button-top">Calendar</a>
 		<a href="sub-sites/computer-science.html" class="gray-button gray-button-top" >Computer Science</a>
