Updated running page

--- a/sub-sites/running.html
+++ b/sub-sites/running.html
@@ -10,7 +10,19 @@
 			<a href="../index.html" class="back-button"> Back </a><span class="page-title"> Running </span>
 		</div>		
 			
-		<div class="organize">	
+		<div class="organize">
+			<div class="race-results">
+				<a class="gray-button" href="http://onlineraceresults.com/race/view_race.php?race_id=70333#racetop">Kansas City Half Marathon - October 2019</a> 
+				<table class="full-width">	
+					<tr> <td class="headline"> Distance </td> <td class="result"> Half Marathon </td> </tr>
+					<tr> <td class="headline"> Time </td> <td class="result"> 2:00:31 </td> </tr>
+					<tr> <td class="headline"> Position </td> <td class="result"> 1,260 of 4,145 </td> </tr>
+					<tr> <td class="headline"> Location </td> <td class="result"> Kansas City, Missouri </td> </tr>
+					<tr> <td class="headline"> Age </td> <td class="result"> 21 </td> </tr>
+					<tr> <td class="headline"> Ran with </td> <td class="result"> Kelsey </td> </tr>
+				</table>
+			</div>
+			
 			<div class="race-results">
 				<a class="gray-button" href="https://sites.google.com/site/parkvilleturkeytrot/results?authuser=0">Turkey Trot - November 2018</a> 
 				<table class="full-width">	
